# YourQuill

./: .gitignore  .gitmodules  CMakeLists.txt  QuickStart.md  README.md  makefile  sedall.csh
_dep/meta/: CMakeLists.txt  InfoWriterImpl.hpp  Meta.hpp  MetaInternal.hxx  MetaProperty.hpp  MetaValueImpl.hxx  Object.hpp  ObjectImpl.hpp  StdTypes.cpp  Variant.hpp
api/: CMakeLists.txt  Loggers.hpp
api/asset/: CMakeLists.txt  ColorQuadrilateral.cpp  ColorQuadrilateral.hpp  ColorTriangle.hpp  ColorTriangle.ipp  NullCamera.cpp  NullCamera.hpp  NullCamera.ipp  Quadrilateral.hpp  Quadrilateral.ipp  SpaceCamera.hpp  SpaceCamera.ipp  TargetCamera.hpp  Triangle.cpp  Triangle.hpp  Triangle.ipp  asset.cpp
api/b3/: CMakeLists.txt  b3.cpp  grammar.hpp  grammar.ipp  preamble.hpp
api/basic/: Array.hpp  CMakeLists.txt  CmdArgs.cpp  Coord.hpp  Coord1.hpp  Coord2.hpp  Coord3.hpp  Coord4.hpp  Coord5.hpp  Coord6.hpp  Enum.cpp  Execute.cpp  Execute.hpp  FileUtils.cpp  FileUtils.hpp  Flag.cpp  Hash.hpp  HttpStatus.cpp  IgCase.cpp  IntRange.hpp  Iter32.hpp  Iter32.ipp  IterW.hpp  Map.hpp  MetaObject.hpp  MetaObject.ipp  MetaObjectInfoWriter.hpp  Object.cpp  Object.hpp  Ref.hpp  Result.hpp  RevIgCase.cpp  Set.hpp  TextUtils.cpp  TextUtils.ipp  XmlUtils.cpp  basic.cpp  preamble.hpp  text_utils.cpp
api/chemistry/: CMakeLists.txt
api/config/: CMakeLists.txt  DirConfig.cpp  DirConfig.hpp
api/core/: AbstractFile.hpp  Comma.hpp  CoreFwd.hpp  DataBlockImpl.hxx  DelayInit.cpp  DelayInit.hpp  Execute.hpp  FileName.cpp  Guarded.hpp  HashVectorImpl.hxx  Http.cpp  InfoWriterImpl.hpp  IntRange.hpp  ListSetImpl.hxx  ListVectorImpl.hxx  Logging.cpp  Logging.hpp  Map.hpp  MapVectorImpl.hxx  Meta.cpp  MetaArg.hpp  MetaField.hpp  MetaProperty.hpp  Ref.hpp  Reverse.hpp  Set.hpp  StdTypes.cpp  Stream.hpp  String.cpp  String.hpp  Utilities.cpp  Vector.hpp  XmlFile.hpp  XmlUtils.hpp  ZipReader.hpp  ZipWriter.hpp  cCommon.cpp  cCommon.hpp
api/data/: FileStrings.hpp  TagFile.hpp  dCommon.cpp  dCommon.hpp
api/db/: Access.hpp  AssertDeny.hpp  Atom.cpp  Atom.hpp  Atom.ipp  AtomSys.cpp  AtomSys.hpp  Attribute.cpp  Attribute.hpp  Attribute.ipp  CMakeLists.txt  Cache.hpp  CacheFwd.hpp  CacheQMetaType.hpp  CacheUtil.cpp  CacheUtil.hpp  CacheUtil.ipp  CalSystem.hpp  Change.hpp  Class.cpp  Class.hpp  Class.ipp  ClassData.hpp  ClassFile.cpp  ClassFile.hpp  ClassFile.ipp  CommonDirs.hpp  CommonDirs.ipp  Context.cpp  Context.hpp  Copyright.cpp  Copyright.hpp  DBUnity.cpp  DBUnity2.cpp  DataRole.hpp  Enums.cpp  Enums.hpp  FileStrings.hpp  FileSys.cpp  FileSys.hpp  (+234 more)
api/dbgui/: CMakeLists.txt  Providers.cpp  QuillApp.cpp  QuillApp.hpp  TableUnity.cpp
api/doodle/: Association.hpp  Association.ipp  CMakeLists.txt  Camera.hpp  Camera.ipp  Constraint.hpp  Constraint.ipp  DObject.hpp  DObject.ipp  Light.hpp  Light.ipp  Location.hpp  Motion.hpp  Motion.ipp  Project.hpp  Project.ipp  Py.hpp  Py.ipp  Py1.hpp  Py1.ipp  Py2.hpp  Py2.ipp  Py3.hpp  Py3.ipp  Py4.hpp  Py4.ipp  Space.hpp  Space.ipp  doodle.cpp  preamble.hpp
api/doodleQt/: CMakeLists.txt  QProject.cpp  QProject.hpp  doodleQt.cpp  preamble.hpp
api/doodler/: Association.cpp  Association.hpp  Association.ipp  AssociationInfoWriter.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Camera.ipp  CameraInfoWriter.hpp  Constraint.cpp  Constraint.hpp  Constraint.ipp  ConstraintInfoWriter.hpp  DObject.cpp  DObject.hpp  DObject.ipp  DObjectInfoWriter.hpp  IOStrings.hpp  Light.cpp  Light.hpp  Light.ipp  LightInfoWriter.hpp  Motion.cpp  Motion.hpp  Motion.ipp  MotionInfoWriter.hpp  P.hpp  Project.cpp  Project.hpp  Project.ipp  Py.cpp  Py.hpp  Py.ipp  Py1.hpp  Py1.ipp  Py2.hpp  Py2.ipp  Py3.hpp  Py3.ipp  Py4.hpp  (+8 more)
api/doodlerQt/: CMakeLists.txt  QProject.cpp  QProject.hpp  doodleQt.cpp  preamble.hpp
api/dtn/: CMakeLists.txt  action.ipp  constraint.ipp  dtn.cpp  trigger.ipp
api/earth/: CMakeLists.txt
api/edit/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorInfoWriter.hpp
api/engine/: AppCreateInfo.hpp  Application.cpp  Application.hpp  Application.ipp  Asset.cpp  Asset.hpp  AssetCache.hpp  AssetCompiler.hpp  AssetInfoWriter.hpp  AssetLoader.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Camera.ipp  CameraInfoWriter.hpp  CameraProxy.hpp  EngineConfig.hpp  Event.hpp  Event.ipp  ImWidget.cpp  ImWidgetInfoWriter.hpp  ImWindow.cpp  ImWindow.hpp  MainWindow.cpp  MainWindow.hpp  Perspective.hpp  Pipeline.cpp  PipelineBuilder.hpp  PipelineConfig.hpp  Pixmap.hpp  Pixmap1.hpp  Pixmap2.hpp  Pixmap3.hpp  Render3D.cpp  Render3D.hpp  Render3DInfoWriter.hpp  RenderFrame.hpp  Rendered.cpp  Rendered.hpp  RenderedInfoWriter.hpp  (+42 more)
api/gadget/: CMakeLists.txt  DateGen.cpp  DateGen.hpp  DateGen.ipp  GadgetUnity.cpp  MonthView.cpp  MonthView.hpp  MonthView.ipp  SqlTool.cpp  SqlTool.hpp  SqlTool.ipp  TimeGen.cpp  TimeGen.hpp  TimeGen.ipp
api/gui/: CMakeLists.txt  CheckBox.hpp  ColorChip.hpp  ComboBox.cpp  ComboBox.hpp  DateEdit.cpp  DateEdit.hpp  DateTimeEdit.hpp  DateTimeWidget.hpp  DateWidget.cpp  DateWidget.hpp  DirBox.cpp  DirBox.hpp  DoubleSpinBox.cpp  DoubleSpinBox.hpp  DrawRuler.hpp  EnumCombo.cpp  EnumCombo.hpp  FileBox.hpp  GridTickModel.hpp  GuiItemRoles.hpp  LineEdit.cpp  LineEdit.hpp  NoSpacesValidator.hpp  Provider.hpp  SpinBox.cpp  SpinBox.hpp  StdIcons.cpp  StdIcons.hpp  StringSetCheck.cpp  StringSetCheck.hpp  TextEdit.hpp  UInt64Mapper.cpp  UInt64Mapper.hpp  UndoAction.cpp  UndoBase.hpp  XmlIdentifierValidator.hpp
api/http/: AtomArg.hpp  AtomArg.ipp  AtomHtml.hpp  (+94 more)
exe/: CMakeLists.txt
plugins/: CMakeLists.txt
res/: CMakeLists.txt  YQResources.cpp  quill.qrc  res.cpp  yqResources.cpp  yqResources.hpp  yqResources.qrc  yquill.qrc
test/: CMakeLists.txt  b3parse.cpp  graphviz_builder.cpp
tests/: CMakeLists.txt  earthdates.cpp  encode64.cpp  http.cpp  strings.cpp  variants.cpp
tool/: CMakeLists.txt  kvtree.cpp  metavalues.cpp  wkspinfo.cpp
tools/: CMakeLists.txt  glfw_monitors.cpp  im_demo.cpp  kvtree.cpp  metavalues.cpp  sqlquery.cpp  tcpsink.cpp  vk_devices.cpp  vk_extensions.cpp  vk_layers.cpp  wkspinfo.cpp
yq-engine/: CMakeLists.txt
yq-http/: CMakeLists.txt  configure.cmake
(+6539 files in other folders)
